After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 686456 - g_type_init is no longer required
g_type_init is no longer required
Status: RESOLVED FIXED
Product: GStreamer
Classification: Platform
Component: gstreamer (core)
git master
Other Linux
: Normal normal
: 1.0.2
Assigned To: GStreamer Maintainers
GStreamer Maintainers
Depends on:
Blocks:
 
 
Reported: 2012-10-19 10:40 UTC by Fabiano Fidêncio
Modified: 2012-10-20 12:14 UTC
See Also:
GNOME target: ---
GNOME version: ---



Description Fabiano Fidêncio 2012-10-19 10:40:13 UTC
According with https://bugzilla.gnome.org/show_bug.cgi?id=686161, g_type_init is no longer required and its use causes:
gst.c:549:3: error: 'g_type_init' is deprecated (declared at /home/fidencio/dev/include/glib-2.0/gobject/gtype.h:669) [-Werror=deprecated-declarations]
Comment 1 Olivier Crête 2012-10-19 15:39:05 UTC
We should instead #define GLIB_VERSION_MIN_REQUIRED and GLIB_VERSION_MAX_ALLOWED to 2.32.
Comment 2 Tim-Philipp Müller 2012-10-20 11:45:27 UTC
Not sure we want to set GLIB_VERSION_MAX_ALLOWED - we may still want to use newer functions conditionally with #if GLIB_CHECK_VERSION...
Comment 3 Tim-Philipp Müller 2012-10-20 12:14:56 UTC
commit bf2452d776899a197239cb6e10882f2978b9ae0c
Author: Tim-Philipp Müller <tim@centricular.net>
Date:   Sat Oct 20 12:54:06 2012 +0100

    g_type_init() is no longer required and deprecated in glib >= 2.35.0
    
    https://bugzilla.gnome.org/show_bug.cgi?id=686456


Dunno about the GLIB_VERSION_MIN_REQUIRED, I think it mostly makes sense for releases, but there it's not needed, since we don't use -Werror for releases, and any warnings don't hurt.

For git we still want warnings so we can fix stuff, I think, rather than suppress the warnings.