g_type_init() is no longer required and deprecated in glib >= 2.35.0

https://bugzilla.gnome.org/show_bug.cgi?id=686456